--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack -w --colors --progress"
   },
   "keywords": ["css", "postcss", "webpack", "purifycss"],
   "author": "Thiago Vieira",
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^7.2.4",
+    "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.8",
     "extract-text-webpack-plugin": "^3.0.2",
     "glob": "^7.1.2",
