--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.8",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.6",
     "glob": "^7.1.2",
     "html-webpack-plugin": "^2.30.1",
     "lost": "^8.2.0",
