--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "autoprefixer": "^7.2.4",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.8",
+    "cssnano": "^3.10.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "glob": "^7.1.2",
+    "html-loader": "^0.5.4",
     "html-webpack-plugin": "^2.30.1",
     "lost": "^8.2.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "postcss-loader": "^2.0.10",
     "purify-css": "^1.2.5",
     "purifycss-webpack": "^0.7.0",
